Added btnAddTask id to the Add Task button

--- a/src/template.html
+++ b/src/template.html
@@ -13,7 +13,7 @@
             <h1>Do List App</h1>
         </div>
         <nav id="mainNav">
-            <button  type="button">Add Task</button>
+            <button id="btnAddTask" type="button">Add Task</button>
             <button type="button">All Todos</button>
             <button type="button">Today</button>
             <button type="button">Next Days</button>
