Added id to the Add project button

--- a/src/template.html
+++ b/src/template.html
@@ -21,7 +21,7 @@
             <button type="button">Not Completed</button>
             <button type="button">Trash</button>
             <p><big><strong>Projects</strong></big></p>
-            <button type="button">Add Project</button>
+            <button id="addProject" type="button">Add Project</button>
         </nav>
     </header>
     <div id="content"></div>
