--- a/src/template.html
+++ b/src/template.html
@@ -21,6 +21,7 @@
             <button type="button">Not Completed</button>
             <button type="button">Trash</button>
             <p><big><strong>Projects</strong></big></p>
+            <ul id="showProjects"></ul>
             <button id="addProject" type="button">Add Project</button>
         </nav>
     </header>
