--- a/src/template.html
+++ b/src/template.html
@@ -8,27 +8,27 @@
 </head>
 
 <body>
-    <header class="header-hero">
-        <div class="logo">
-            <h1>Do List App</h1>
+    <div class="appContainer">
+        <div class="header">
+            <h1>ToDo List App</h1>
         </div>
+        <div id="content" class="taskCanvas"></div>
         <nav id="mainNav">
             <button id="btnAddTask" type="button">Add Task</button>
-            <button type="button">All Todos</button>
             <button type="button">Today</button>
             <button type="button">Next Days</button>
             <button type="button">Completed</button>
             <button type="button">Not Completed</button>
             <button type="button">Trash</button>
-            <p><big><strong>Projects</strong></big></p>
+            <h2>Projects</h2>
             <ul id="showProjects"></ul>
             <button id="addProject" type="button">Add Project</button>
         </nav>
-    </header>
-    <div id="content"></div>
-    <footer id="fotter">
-        <p>Plunkydev All rights reserved &copy; 2024</p>
-    </footer>
+        <footer id="fotter">
+            <p>Plunkydev All rights reserved &copy; 2024</p>
+        </footer>
+    </div>
+    <div id="floatWindow" class="floatWindowClass"></div>
 </body>
 
 </html>
