--- a/src/template.html
+++ b/src/template.html
@@ -17,8 +17,8 @@
             <button id="btnAddTask" type="button">Add Task</button>
             <button type="button">Today</button>
             <button type="button">Next Days</button>
-            <button type="button">Completed</button>
-            <button type="button">Not Completed</button>
+            <button id="btnComplete" type="button">Completed</button>
+            <button id="btnNotComplete" type="button">Not Completed</button>
             <button type="button">Trash</button>
             <h2>Projects</h2>
             <ul id="showProjects"></ul>
