Updated button IDs: renamed 'Today' button to 'btnTodayTasks' and 'Next Days' button to 'btnNext7Days' for better clarity and consistency

--- a/src/template.html
+++ b/src/template.html
@@ -15,8 +15,8 @@
         <div id="content" class="taskCanvas"></div>
         <nav id="mainNav">
             <button id="btnAddTask" type="button">Add Task</button>
-            <button type="button">Today</button>
-            <button type="button">Next Days</button>
+            <button id="btnTodayTasks" type="button">Today</button>
+            <button id="btnNext7Days" type="button">Next 7 Days</button>
             <button id="btnComplete" type="button">Completed</button>
             <button id="btnNotComplete" type="button">Not Completed</button>
             <h2>Projects</h2>
