Added 'Unfulfilled Task' button to main navigation for filtering overdue tasks. Updated HTML structure to include 'btnUnfulfilledTask' button.

--- a/src/template.html
+++ b/src/template.html
@@ -19,6 +19,7 @@
             <button id="btnNext7Days" type="button">Next 7 Days</button>
             <button id="btnComplete" type="button">Completed</button>
             <button id="btnNotComplete" type="button">Not Completed</button>
+            <button id="btnUnfulfilledTask" type="button">Unfulfilled Task</button>
             <h2>Projects</h2>
             <ul id="showProjects"></ul>
             <button id="addProject" type="button">Add Project</button>
