Added 'clickable' class to main navigation buttons for enhanced user feedback. Updated footer copyright text to 'All rights to Share, Enjoy' for a more user-friendly tone.

--- a/src/template.html
+++ b/src/template.html
@@ -14,18 +14,18 @@
         </div>
         <div id="content" class="taskCanvas"></div>
         <nav id="mainNav">
-            <button id="btnAddTask" type="button">Add Task</button>
-            <button id="btnTodayTasks" type="button">Today</button>
-            <button id="btnNext7Days" type="button">Next 7 Days</button>
-            <button id="btnComplete" type="button">Completed</button>
-            <button id="btnNotComplete" type="button">Not Completed</button>
-            <button id="btnUnfulfilledTask" type="button">Unfulfilled Task</button>
+            <button class="clickable" id="btnAddTask" type="button">Add Task</button>
+            <button class="clickable" id="btnTodayTasks" type="button">Today</button>
+            <button class="clickable" id="btnNext7Days" type="button">Next 7 Days</button>
+            <button class="clickable" id="btnComplete" type="button">Completed</button>
+            <button class="clickable" id="btnNotComplete" type="button">Not Completed</button>
+            <button class="clickable" id="btnUnfulfilledTask" type="button">Unfulfilled Task</button>
             <h2>Projects</h2>
             <ul id="showProjects"></ul>
             <button id="addProject" type="button">Add Project</button>
         </nav>
         <footer id="fotter">
-            <p>Plunkydev All rights reserved &copy; 2024</p>
+            <p>Plunkydev All rights to Share, Enjoy &copy; 2024</p>
         </footer>
     </div>
     <div id="floatWindow" class="floatWindowClass"></div>
